make sure page images aren't too large

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,3 +1,9 @@
 // .page-container {
 //   min-height: 100vh;
 // }
+
+.page-content {
+  img {
+    max-height: 400px;
+  }
+}
